--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8082
+web.images-path=D:/workspace/zjy_workspace_java/work_sts_4_16/spring-boot-demo2/src/main/resources/static
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/test/,file:${web.images-path} 
